Release history for Path-IsDev

{{$NEXT}}

1.001002 2014-08-16T04:40:51Z
 [00 Trivial]
 - CPANDAY!
 - no code changes
 - tests augmented
 - whitespace reduced

 [Dependencies::Stats]
 - Dependencies changed since 1.001001, see misc/*.deps* for details
 - configure: ↓1
 - develop: +1 (suggests: ↑2)
 - test: +1 -3 (recommends: ↑1 -1)

 [Metadata]
 - move to kentnl org

 [Misc]
 - Improve source side POD to reduce build side whitespace.

 [Tests]
 - update Test::ReportPrereqs

1.001001 2014-07-12T18:23:30Z
 [00 Trivial]
 - Misc packaging cleanups.

 [Dependencies::Stats]
 - Dependencies changed since 1.001000, see misc/*.deps* for details
 - configure: (recommends: ↑1)
 - develop: +3 -3 (suggests: +2 -1)
 - test: (recommends: ↑2)

1.001000 2014-03-01T13:22:00Z
 [00 Majorish]
 - Tooling switched to ExtUtils::MakeMaker

 [Bug fixes]
 - Needed newer Path::Tiny for ->realpath

 [Dependencies::Aggregate]
 - 5.008 - 48 → 43
 - 5.010 - 31 → 32
 - 5.019 - 17 → 16

 [Dependencies::Stats]
 - Dependencies changed since 1.000002, see misc/*.deps* for details
 - build: -1
 - configure: +1 -1 (recommends: +1)
 - develop: +7 ↑1 -9
 - runtime: +1 ↑2
 - test: +4 ↓1 (recommends: +4)

1.000002 2013-11-22T03:28:04Z
 [Bug Fixes]
 - Attempt to avoid failures on some Win32's where methods other than File::HomeDir->my_home don't work at all.

 [Dependencies::Stats]
 - Dependencies changed since 1.000001, see misc/*.deps* for details
 - develop: ↑1

 [Maintenance]
 - Split Changes into Changes.{deps,deps.all,deps.dev} for easier reading for maintainers.

1.000001 2013-11-21T11:49:20Z
 [Dependencies::Stats]
 - Dependencies changed since 1.000000, see misc/*.deps* for details
 - build: ↑1
 - configure: ↑1
 - develop: +42 ↑1
 - test: ↑1 -3

 [Documentation]
 - README.mkdn → MetaCPAN
 - Encoding → UTF-8

 [Maintenance]
 - Increase deps on Module::Build and Test::More
 - Removes a few deps no longer needed.

 [Packaging]
 - Use new fallback code in MB

 [Tests]