@@ -1,2 +1,3 @@
-.build
+/.build
 /Path-IsDev-*
+/tmp/
