@@ -1,6 +1,7 @@
 ; Generated by Dist::Zilla::Plugin::Author::KENTNL::DistINI version 1.7.4 at Sat Jul  6 04:44:50 2013
+; vim: syntax=dosini
 name             = Path-IsDev
-author           = Kent Fredric <kentfredric@gmail.com>
+author           = Kent Fredric <kentnl@cpan.org>
 license          = Perl_5
 copyright_holder = Kent Fredric <kentfredric@gmail.com>
 
@@ -9,7 +10,6 @@ copyright_holder = Kent Fredric <kentfredric@gmail.com>
 
 [@Author::KENTNL]
 :version          = 2.016
-git_versions      = 1
 normal_form       = numify
 mantissa          = 6
 toolkit           = eumm
@@ -25,7 +25,7 @@ srcreadme         = mkdn
 ; version_rel_day   = 6
 ; version_rel_hour  = 4
 ; version_rel_time_zone = Pacific/Auckland
-twitter_hash_tags = #perl #cpan
+; twitter_extra_hash_tags =
 ; auto_prereqs_skip = File::Find
 
 [Prereqs]
