@@ -1,6 +1,14 @@
 Release history for Path-IsDev
 
 {{$NEXT}}
+ - Bugfix: Avoid -Ddefault_inc_excludes_dot failures ( also makes tests *much* faster )
+
+ [Dependencies::Stats]
+ - Dependencies changed since 1.001002, see misc/*.deps* for details
+ - configure: +1 (recommends: ↑1)
+ - develop: +14 ↑4 -3 (recommends: +1, suggests: ↑2)
+ - runtime: (recommends: +1)
+ - test: +1 ↓1 (recommends: ↑1 ↓1)
 
 1.001002 2014-08-16T04:40:51Z
  [00 Trivial]
@@ -250,4 +258,3 @@ Release history for Path-IsDev
 
 0.1.0 2013-07-06T12:49:36Z
  - First version.
-
